Ref. #250 | Versão de teste implementada